# pydev

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  makefile  package-lock.json  package.json  pyproject.toml  tailwind.config.js
apps/pages/: urls.py
apps/pages/templatetags/: svg_icon.py  user_crown.py
apps/payments/: urls.py  views.py
apps/resumes/: models.py  urls.py  views.py
apps/resumes/forms/: __init__.py  resume_form.py
apps/resumes/migrations/: 0002_comment.py  0006_resume_bookmark.py
apps/users/: views.py
config/: routes.py  settings.py
core/: routes.py  settings.py  urls.py
lib/auth/: group.py
lib/middlewares/: auth_message.py
lib/models/: soft_delete.py
lib/payments/: braintree.py
pages/: urls.py  views.py
pages/templates/pages/: about.html  home.html
pages/templatetags/: user_crown.py
payments/: urls.py  views.py
payments/management/commands/: init_db.py
payments/templates/payments/: new.html  vip.html
resumes/: models.py  urls.py  views.py
resumes/forms/: resume_form.py
resumes/migrations/: 0001_initial.py  0002_comment.py  0003_comment_deleted_at_and_more.py  0004_resume_user.py  0005_comment_user.py
resumes/templates/resumes/: _comment.html  edit.html  index.html  new.html  show.html
src/scripts/: app.js  fontawesome.js
src/scripts/components/: braintree.js  index.js  (+2 more)
src/styles/: style.css
static/styles/: style.css
templates/layouts/: base.html
templates/pages/: about.html
templates/resumes/: index.html
templates/shared/: flash.html  navbar.html
users/: urls.py  views.py
(+13 files in other folders)
